methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
	while (isFacingTrail()){
    if (!estSurBiscuit()){
      forward()
      baisseBrosse()
      leveBrosse()
    }
    else {
      baisseBrosse()
      leveBrosse()
      prendBiscuit()
      return true
    }
  }  
  prendBiscuit()  
 }

def isFacingTrail():Boolean = {
  var x:string=rien
  forward
  x=getCouleurSol
  while (!estSurBiscuit){
    if (!estFaceMur){
      forward()
      if (getGroundColor()==x){
        backward ; return true
      }
      else 
        backward()
        left()
    }
    else 
      left()
    }
  return true
  }